tests/outref/TII05.ref

-- TII05 : OCTO502 : Test ERR_INSERT_INTO_TYPE_MISMATCH and ERR_INSERT_INTO_TOO_MANY_COLUMNS errors

-- Test ERR_INSERT_INTO_TYPE_MISMATCH error
INSERT INTO names SELECT firstname FROM names;
INSERT INTO names SELECT lastname FROM names;
INSERT INTO names SELECT firstname,id+6 FROM names;
INSERT INTO names SELECT firstname,firstname,lastname FROM names;
INSERT INTO names SELECT id+6,id,lastname FROM names;
INSERT INTO names SELECT id+6, firstname, TRUE from names;
INSERT INTO names SELECT (id+6)::BOOLEAN, firstname, lastname from names;
INSERT INTO names SELECT id::BOOLEAN, firstname, lastname from names;

-- Test error ERR_INSERT_INTO_TOO_MANY_COLUMNS error
INSERT INTO names SELECT id,firstname,lastname,id FROM names;
INSERT INTO names SELECT NULL,NULL,NULL,NULL FROM names;

[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type VARCHAR
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT firstname FROM names;
                         ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT firstname FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type VARCHAR
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT lastname FROM names;
                         ^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT lastname FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type VARCHAR
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT firstname,id+6 FROM names;
                         ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT firstname,id+6 FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type VARCHAR
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT firstname,firstname,lastname FROM names;
                         ^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT firstname,firstname,lastname FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'FIRSTNAME' is of type VARCHAR but expression is of type INTEGER
Error with syntax near (line 1, column 31):

INSERT INTO names SELECT id+6,id,lastname FROM names;
                              ^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT id+6,id,lastname FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'LASTNAME' is of type VARCHAR but expression is of type BOOLEAN
Error with syntax near (line 1, column 43):

INSERT INTO names SELECT id+6, firstname, TRUE from names;
                                          ^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT id+6, firstname, TRUE from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type BOOLEAN
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT (id+6)::BOOLEAN, firstname, lastname from names;
                         ^^^^^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT (id+6)::BOOLEAN, firstname, lastname from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TYPE_MISMATCH : Column 'ID' is of type INTEGER but expression is of type BOOLEAN
Error with syntax near (line 1, column 26):

INSERT INTO names SELECT id::BOOLEAN, firstname, lastname from names;
                         ^^^^^^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT id::BOOLEAN, firstname, lastname from names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TOO_MANY_COLUMNS : INSERT has more expressions than target columns
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT id,firstname,lastname,id FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_INSERT_INTO_TOO_MANY_COLUMNS : INSERT has more expressions than target columns
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: INSERT INTO names SELECT NULL,NULL,NULL,NULL FROM names;
